Fix threading problem involving KSharedConfig

Stop using it in favor of QSharedPointer<KConfig>, so that we don't access
the shared database, which is not thread-safe.

BUG: 333599